Fixing alignment for b-values attribtues in annotation container.

--- a/modules/web/css/ballerina-file-editor.css
+++ b/modules/web/css/ballerina-file-editor.css
@@ -1105,6 +1105,10 @@ table.annotation-table tr:hover > td > .annotation-openning-bracket > .annotatio
     cursor: pointer;
 }
 
+.attribute-value-bvalue .annotation-attribute-key {
+    padding-left: 16px;
+}
+
 .popout-button-wrapper i {
     padding-top: 4px;
     font-size: 9px;
